<resources>
    <string name="app_name">有证验证</string>
    <string name="tv_home_certificate">验证入园</string>
    <string name="tv_home_title">有证验证</string>
    <string name="tv_home_statistics">入园统计</string>
    <string name="tv_home_order">预约情况</string>
    <string name="tv_home_exit">退出</string>
    <string name="tv_home_check">验证上岗中</string>
    <string name="tv_certificate_title">入园认证</string>
    <string name="tv_nfc_read">读卡中…</string>
    <string name="tv_infrared_info">红外线已开启，请扫描条形码或二维码</string>
    <string name="tv_camera_info">请将摄像头对准二维码/条形码进行扫描</string>
    <string name="tv_camera_btn_blue">条形码/二维码</string>
    <string name="tv_camera_btn_white">人脸识别</string>
    <string name="tv_artificial_card">卡号</string>
    <string name="tv_artificial_info">身份证号</string>
    <string name="tv_artificial_num">手机号</string>
    <string name="tv_artificial_in">请输入</string>
    <string name="tv_artificial_button">确定</string>
    <string name="tv_artificial_information">可以使用年卡卡号/身份证号码/手机号码，任选其一验证入园</string>
    <string name="tv_check_ok_yes">验证成功</string>
    <string name="tv_check_no_card">验证失败</string>
    <string name="tv_check_ok_detail">订单详情</string>
    <string name="tv_check_ok_product">商品</string>
    <string name="tv_check_ok_shop">商铺</string>
    <string name="tv_check_ok_order">订单号</string>
    <string name="tv_check_ok_status">订单状态</string>
    <string name="tv_check_ok_time">下单时间</string>
    <string name="tv_check_ok_button">继续验票</string>
    <string name="tv_check_ok_statistics">预约时间</string>
    <string name="tv_help_center_order">订单验证失败</string>
    <string name="tv_help_center_lose">年卡失效</string>
    <string name="tv_help_center_unactive">年卡未激活</string>
    <string name="tv_help_center_bad">年卡损坏</string>
    <string name="tv_setting_wifi">云端和网络设置</string>
    <string name="tv_setting_update">软件更新</string>
    <string name="tv_setting_version">当前版本</string>
    <string name="tv_splash_welcome">欢迎使用</string>
    <string name="tv_splash_name">有证验证系统</string>
    <string name="tv_help_center_name">帮助中心</string>
    <string name="tv_setting_name">系统设置</string>
    <string name="tv_dialog_name">提示</string>
    <string name="tv_dialog_info">无法识别卡片!</string>
    <string name="tv_dialog_cancel">取消</string>
    <string name="tv_dialog_in">手动录入卡号</string>
    <string name="tv_check_ok_card_name">姓名</string>
    <string name="tv_check_ok_card_num">证件号码</string>
    <string name="tv_check_ok_card_phone">手机号码</string>
    <string name="tv_check_ok_card_info_title">年卡信息</string>
    <string name="tv_check_choose_btn">使用</string>
    <string name="tv_home_card">可用卡券</string>
    <string name="tv_home_help">帮助中心</string>
    <string name="tv_home_set">设置</string>
    <string name="tv_check_qr">用户扫描左侧二维码，进行激活操作</string>
    <string name="tv_order_list">清单</string>
    <string name="tv_order_button">查看明细</string>
    <string name="tv_order_search_hint">请输入查询内容</string>

</resources>