<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F2F2F2"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:background="@color/color_FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:text="@string/tv_artificial_card"
            android:textColor="@color/color_333333"
            android:textSize="14sp" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:background="@null"
            android:hint="@string/tv_artificial_in"
            android:maxLines="1"
            android:textColor="@color/color_999999"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/color_FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:text="@string/tv_artificial_info"
            android:textColor="@color/color_333333"
            android:textSize="14sp" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:background="@null"
            android:hint="@string/tv_artificial_in"
            android:maxLines="1"
            android:textColor="@color/color_999999"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/color_FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:text="@string/tv_artificial_num"
            android:textColor="@color/color_333333"
            android:textSize="14sp" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:background="@null"
            android:hint="@string/tv_artificial_in"
            android:maxLines="1"
            android:textColor="@color/color_999999"
            android:textSize="14sp" />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:lineSpacingExtra="20dp"
        android:text="@string/tv_artificial_information"
        android:textColor="@color/color_999999"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_artificial_true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/item_home_button_background"
            android:text="@string/tv_artificial_button"
            android:textColor="@color/color_FFFFFF"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>