<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@drawable/item_check_ok_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@drawable/item_home_card_title">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:src="@mipmap/ic_nfc_fail_info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/tv_dialog_name"
            android:textColor="@color/color_FFFFFF"
            android:textSize="12sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_dialog_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:text="@string/tv_dialog_info"
            android:textColor="@color/color_E60012"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_dialog_info">

            <Button
                android:id="@+id/btn_dialog_cancel"
                android:layout_width="90dp"
                android:layout_height="24dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/item_camera_btn_blue"
                android:text="@string/tv_dialog_cancel"
                android:textColor="@color/color_FFFFFF"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_dialog_in"
                android:layout_width="90dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/item_camera_btn_blue"
                android:text="@string/tv_dialog_in"
                android:textColor="@color/color_FFFFFF"
                android:textSize="12sp" />
        </RelativeLayout>


    </RelativeLayout>

</LinearLayout>