<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F2F2F2"
    android:orientation="vertical">

    <include
        android:id="@+id/title_layout"
        layout="@layout/item_title" />


    <ScrollView
        android:layout_marginBottom="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="161.5dp"
                android:background="@color/color_FFFFFF"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/item_check_ok_yes"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_check_ok_yes" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_check_ok_yes"
                    android:textColor="@color/color_333333"
                    android:textSize="18sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/item_check_ok_rectangle" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="245.5dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="-36dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/item_check_ok_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <View
                            android:id="@+id/view"
                            android:layout_width="2dp"
                            android:layout_height="16dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="12dp"
                            android:background="@color/color_0AABF6" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="7.5dp"
                            android:layout_toEndOf="@+id/view"
                            android:text="游客信息(2人)"
                            android:textColor="@color/color_0AABF6"
                            android:textSize="14sp" />
                    </RelativeLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/item_check_ok_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_FFFFFF">

                        <View
                            android:id="@+id/view1"
                            android:layout_width="2dp"
                            android:layout_height="16dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="12dp"
                            android:background="@color/color_0AABF6" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="7.5dp"
                            android:layout_toEndOf="@+id/view1"
                            android:text="@string/tv_check_ok_detail"
                            android:textColor="@color/color_0AABF6"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0.5dp"
                        android:background="@color/color_FFFFFF">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12.5dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="17dp"
                            android:text="@string/tv_check_ok_product"
                            android:textColor="@color/color_0AABF6"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="91.5dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="17dp"
                            android:text="颐和园北宫门门票"
                            android:textColor="@color/color_333333"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0.5dp"
                        android:background="@color/color_FFFFFF">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12.5dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="17dp"
                            android:text="@string/tv_check_ok_shop"
                            android:textColor="@color/color_0AABF6"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="91.5dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="17dp"
                            android:text="湖南12301商铺"
                            android:textColor="@color/color_333333"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0.5dp"
                        android:background="@color/color_FFFFFF">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12.5dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="17dp"
                            android:text="@string/tv_check_ok_order"
                            android:textColor="@color/color_0AABF6"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="91.5dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="17dp"
                            android:text="1234567"
                            android:textColor="@color/color_333333"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0.5dp"
                        android:background="@color/color_FFFFFF">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12.5dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="17dp"
                            android:text="@string/tv_check_ok_status"
                            android:textColor="@color/color_0AABF6"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="91.5dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="17dp"
                            android:text="未使用"
                            android:textColor="@color/color_333333"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0.5dp"
                        android:background="@color/color_FFFFFF">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12.5dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="17dp"
                            android:text="@string/tv_check_ok_time"
                            android:textColor="@color/color_0AABF6"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="91.5dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="17dp"
                            android:text="下单时间"
                            android:textColor="@color/color_333333"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0.5dp"
                        android:background="@color/color_FFFFFF">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12.5dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="17dp"
                            android:text="@string/tv_check_ok_statistics"
                            android:textColor="@color/color_0AABF6"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="91.5dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="17dp"
                            android:text="预约时间"
                            android:textColor="@color/color_333333"
                            android:textSize="14sp" />

                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/item_home_button_background"
        android:text="@string/tv_check_ok_button"
        android:textColor="@color/color_FFFFFF"
        android:textSize="14sp" />
</RelativeLayout>